--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,170 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: 'Inter', system-ui;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #e7f6ff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button,
+input {
+    font-family: 'Inter', system-ui;
+}
+
+.Wrapper {
+    background-color: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+    border-radius: 20px;
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #eaeaea;
+    padding: 10px;
+}
+
+.headerRight {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-right: 50px;
+    cursor: pointer;
+}
+
+.headerLeft {
+    display: flex;
+    align-items: center;
+}
+
+.headerLeft.img {
+    margin-right: 15px;
+}
+
+.headerLeft.h3 {
+    margin: 0;
+}
+
+.headerLeft.p {
+    margin: 0;
+}
+
+.content {
+    padding: 30px;
+}
+
+.contentHeader {
+    display: flex;
+    justify-content: space-between;
+}
+
+.items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 35px;
+}
+
+.clear {
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+    right: 15px;
+}
+
+.searchBlock {
+    border: 1px solid #f3f3f3;
+    margin-top: 25px;
+    display: flex;
+    height: 30px;
+    border-radius: 10px;
+    padding: 0 15px;
+}
+
+input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.drawer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    width: 385px;
+    height: 100%;
+    z-index: 1;
+    background: #FFFFFF;
+    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+}
+
+.cartItems {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
+h2 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.cartItem {
+    display: flex;
+    align-items: center;
+}
+
+.plusButton {
+    border: 0;
+    cursor: pointer;
+}
+
+.higherCartPart {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.cartTotalBlock {
+    flex: 1;
+    height: 1px;
+    border: 1px dashed #dfdfdf;
+}
+
+button {
+    width: 100%;
+    height: 55px;
+    background: #9DD558;
+    border-radius: 18px;
+    border: 0;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.2s ease-in-out;
+}
+
+button:hover {
+    background: lighten( #9DD558, 5%);
+}
+
+button:active {
+    background: darken(#9DD558, 5%);
 }
